--- a/CAB MANAGEMENT SYSTEM/Web.config
+++ b/CAB MANAGEMENT SYSTEM/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="con"  connectionString="Data Source=LAPTOP-KR57FC51\SQLEXPRESS;Initial 
-			 Catalog=cabmanagementDB; Integrated Security=true"/>
+		<add name="con" connectionString="Data Source=LAPTOP-KR57FC51\SQLEXPRESS;initial Catalog=cabDB;Trusted_Connection=true"
+   providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
